# agentic-rag-pdf

./: .env.example  .gitignore  .pre-commit-config.yaml  DESIGN.md  Makefile  README.md  TECHNICAL_NOTE.md  project.md  pyproject.toml  requirements.txt  ruff.toml
docs/: README.md  TECHNICAL_NOTE.md  architecture.md  cli_demo.md  demo.md  demo_output.md
eval/: questions.json
scripts/: evaluate.py
src/agentic_rag/: __init__.py  cli.py  config.py  llm.py
src/agentic_rag/agents/: base.py  orchestrator.py  pipeline.py  tools.py  verifier.py
src/agentic_rag/memory/: store.py
src/agentic_rag/preprocessing/: chunker.py  outline.py  pdf_loader.py
src/agentic_rag/retrieval/: base.py  bm25_index.py  dense_index.py  hybrid.py
tests/: conftest.py  test_memory.py  test_pipeline_integration.py  test_preprocessing.py  test_retrieval.py  test_tools.py
