[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag-pdf"
version = "0.1.0"
description = "Agentic, multi-modal RAG over PDF documents (OpenAI + hybrid retrieval)."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "openai>=1.50",
    "chromadb>=0.5.0",
    "bm25s>=0.2.0",
    "PyStemmer>=2.2.0",
    "PyMuPDF>=1.24.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "rich>=13.7.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "pre-commit>=3.7"]

[project.scripts]
agentic-rag = "agentic_rag.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
